# FlightSim_Backend_RS

./: .env.example  .gitignore  CMakeLists.txt  Cargo.toml  README.md
cmake/: zig-cc-aarch64-linux-gnu.sh  zig-cc-x86_64-linux-gnu.sh
src/: api.rs  app.rs  cache.rs  config.rs  lib.rs  main.rs  middleware.rs  models.rs  state.rs
src/api/: airport_traffic.rs  controller_detail.rs  flight_track.rs  mod.rs  online_list.rs  pilot_detail.rs  types.rs
src/auth/: handler.rs
src/cache/: online_data.rs
src/middleware/: cors.rs  ratelimit.rs
src/models/: base_user.rs  flight_plan.rs  online_controller.rs  online_data.rs  online_pilot.rs
src/polling/: task.rs
tests/: health.rs  routes.rs
